# CGALTesting

./: CGALTesting.cpp  CMakeLists.txt  CMakePresets.json  README.md
CGALTesting/: CGALTesting.cpp  CGALTesting.h  CMakeLists.txt
